# gpg-encrypt-env

./: .pre-commit-hooks.yaml  pyproject.toml
gpg_encrypt_env/: hook.py
